--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
   "devDependencies": {
     "daisyui": "^3.6.1",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "description": "![Logo](https://camo.githubusercontent.com/72d4e416bd802a1abc16d86e9d7d7a62318fca378d103f97fda207ef7d61463d/68747470733a2f2f7974332e67677068742e636f6d2f7974632f414b65644f4c543759443978365069522d4366624262464333777a3257617469495a4672495f4930762d366b3d733930302d632d6b2d63307830306666666666662d6e6f2d726a)",
+  "main": "tailwind.config.js",
+  "author": "",
+  "license": "ISC"
 }
